--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,10 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 @layer utilities {
