--- a/src/components/progress/progress.css
+++ b/src/components/progress/progress.css
@@ -1,4 +1,7 @@
 .vertical{
-    /*transform: rotate(-90deg);*/
-    top:40%;
+    transform: rotate(-90deg);
+}
+
+.progress {
+    transform: rotate(180deg);
 }
