--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Futura';
+  src: url('./fonts/FuturaCyrillicMedium.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'ivy';
+  src: url('./fonts/IvyMode-Italic.ttf') format("truetype");
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
